# sfos-bepo

./: CMakeLists.txt  README.md  fr_bepo.qml  layouts_bepo.conf  layouts_western.conf  sfos-bepo.desktop
qml/pages/: FirstPage.qml
rpm/: sfos-bepo.spec  sfos-bepo.yaml
src/: sfos-bepo.cpp
